--- a/nubank/package.json
+++ b/nubank/package.json
@@ -15,6 +15,10 @@
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-gesture-handler": "1.5.0",
+    "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-qrcode": "^0.2.7",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^7.5.1",
     "react-navigation": "4.0.10",
     "reactotron-react-native": "4.0.2",
     "styled-components": "4.4.1"
